# SoftRender

./: .appveyor.yml  .clang-format  .cmake-format.py  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Doxyfile  Doxyfile-mcss  README.md  azure-pipelines.yml
.github/workflows/: linux_clang.yaml  linux_gcc.yaml  linux_gcc9.yaml
cmake/: CodeCoverage.cmake  FindSDL2.cmake  Sanitizers.cmake  SetCXXStandard.cmake
docs/: README.md  annotated.html  classA.html  classsoftrender_1_1wavefront__model__t.html  classsoftrender_1_1window__t.html  dir_000000_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  docs_8hpp.html  download_and_setup.html  files.html  globals.html  globals_func.html  graph_legend.html  group__canvas__manipulation.html  group__predefined__colors.html  group__unchecked__release.html  index.html  modules.html  namespaces.html  namespacesoftrender.html  namespacesoftrender_1_1colors.html  pages.html  searchdata-v1.js  softrender_8cpp.html  softrender_8cpp__incl.dot  softrender_8cpp__incl.md5  softrender_8cpp_source.html  softrender_8hpp.html  softrender_8hpp__dep__incl.dot  softrender_8hpp__dep__incl.md5  softrender_8hpp_source.html  structgraphics__impl_1_1key__event__t.html  structsoftrender_1_1key.html  structsoftrender_1_1key__event__t.html  structsoftrender_1_1mouse__button.html  structsoftrender_1_1mouse__event__t.html  structsoftrender_1_1pixel__t.html  structsoftrender_1_1point__t.html  (+2 more)
docs/search/: all_0.js  files_0.js  functions_0.js
docs/xml/: README_8md.xml  classsoftrender_1_1wavefront__model__t.xml  classsoftrender_1_1window__t.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_b0856f6b0d80ccb263b2f415c91f9e17.xml  docs_8hpp.xml  download_and_setup.xml  group__canvas__manipulation.xml  group__unchecked__release.xml  index.xml  indexpage.xml  keys_8cpp.xml  keys_8hpp.xml  mouse__button_8cpp.xml  mouse__button_8hpp.xml  namespace_0D2.xml  namespace_0d2.xml  namespacegraphics__impl.xml  namespacegraphics__impl_1_1surface__info.xml  namespacesoftrender.xml  namespacesoftrender_1_1colors.xml  softrender_8cpp.xml  softrender_8hpp.xml  structsoftrender_1_1key.xml  structsoftrender_1_1key__event__t.xml  structsoftrender_1_1mouse__button.xml  structsoftrender_1_1mouse__event__t.xml  structsoftrender_1_1pixel__t.xml  structsoftrender_1_1point__t.xml  structsoftrender_1_1vec2.xml  structsoftrender_1_1vec3.xml  vec_8hpp.xml  wavefront__reader_8cpp.xml  wavefront__reader_8hpp.xml
examples/: CMakeLists.txt
examples/simple_snake/: CMakeLists.txt  main.cpp
scripts/: cmake-clang.sh  cmake-osx.sh  cmake.sh  codecov-io-azure.sh  codecov-io.sh  commands_parse.py  run-cmake-format.sh  vcpkg.sh
src/: CMakeLists.txt  keys.cpp  mouse_button.cpp  softrender.cpp  wavefront_reader.cpp
src/include/: docs.hpp  docs.txt  keys.hpp  mouse_button.hpp  softrender.hpp  vec.hpp  wavefront_reader.hpp
tests/: CMakeLists.txt  black_screen.cpp  canvas_manipulation.cpp  colors.cpp  exception.cpp  key_callback.cpp  line.cpp  mouse_button.cpp  mouse_position.cpp  moving_rect.cpp  point.cpp  point_coord2D.cpp  rect_follow_mouse.cpp  rectangle.cpp  setup.cpp  triangle.cpp  vec.cpp
tests/basic_flat_shading_render/: CMakeLists.txt  basic_flat_shading_render.cpp  with_lighting.cpp
tests/basic_wire_render/: CMakeLists.txt  main.cpp
tests/test_helpers/: test_helpers.hpp
xml/: README_8md.xml  classA.xml  classsoftrender_1_1wavefront__model__t.xml  classsoftrender_1_1window__t.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_b0856f6b0d80ccb263b2f415c91f9e17.xml  docs_8hpp.xml  download_and_setup.xml  group__canvas__manipulation.xml  group__predefined__colors.xml  group__unchecked__release.xml  index.xml  indexpage.xml  namespace_0d0.xml  namespace_0d1.xml  namespacedummy__impl.xml  namespacegraphics__impl.xml  namespacegraphics__impl_1_1surface__info.xml  namespaceparse.xml  namespacesoftrender.xml  namespacesoftrender_1_1colors.xml  namespacesoftrender_1_1surface__info.xml  parse_8py.xml  softrender_8cpp.xml  softrender_8hpp.xml  structgraphics__impl_1_1key__event__t.xml  structsoftrender_1_1basic__vec.xml  structsoftrender_1_1key.xml  structsoftrender_1_1key__event__t.xml  structsoftrender_1_1last__t.xml  structsoftrender_1_1last__t_3_01T_01_4.xml  structsoftrender_1_1pixel__t.xml  structsoftrender_1_1point__t.xml  structsoftrender_1_1vec.xml  structsoftrender_1_1vec2.xml  structsoftrender_1_1vec3.xml  structsoftrender_1_1vec_3_012_00_01T_01_4.xml  structsoftrender_1_1vec_3_013_00_01T_01_4.xml  structsoftrender_1_1vec_3_014_00_01T_01_4.xml  structsoftrender_1_1vec__component.xml  (+1 more)
